--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
-    "aws-sdk": "^2.1409.0",
+    "aws": "^0.0.3-2",
+    "aws-sdk": "^2.1415.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -23,6 +24,7 @@
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.3",
     "razorpay": "^2.8.6",
+    "sdk": "^0.5.0",
     "sequelize": "^6.31.0",
     "sib-api-v3-sdk": "^8.5.0",
     "uuid": "^9.0.0"
